src/test/scala/au/edu/mq/comp/perentiemq/iml/syntax/funcerr2.out
src/test/scala/au/edu/mq/comp/perentiemq/iml/funcerr2.iml:2:19: error: identifier expected
def funcerr2(x): () {
                  ^

